--- a/about.html
+++ b/about.html
@@ -1,15 +1,41 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Us - Jerk Threads</title></head>
-<body>
-<h1>🛠️ About Us – Jerk Threads</h1>
-<p>Built with love. Stitched with purpose.</p>
-<p>She is the beauty. I am the beast. Together, we’re building something loud, loyal, and legendary.</p>
-<p>What started as jerky turned into shirts, but the spirit stayed the same: Raw. Real. Unfiltered.</p>
-<p><strong>👑 Our Story:</strong> She brings the grace. I bring the grit. She brings the heart. I bring the hustle.</p>
-<p><strong>❤️ Mission:</strong> To wear what matters, print what’s real, and honor love, loyalty, and the power of believing in your own story.</p>
-<p><strong>✨ Promise:</strong> If you can dream it, I can make it. Your wish is my command, deary.</p>
-<p><a href="index.html">Return to Home</a></p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+</head>
+<body style="margin: 0; font-family: Arial, sans-serif; background-color: #111; color: white;">
+  
+<nav style="display: flex; justify-content: space-around; background-color: #000; padding: 10px;">
+  <a href="index.html" style="color: white; text-decoration: none;">Home</a>
+  <a href="shop.html" style="color: white; text-decoration: none;">Shop</a>
+  <a href="custom.html" style="color: white; text-decoration: none;">Custom Orders</a>
+  <a href="about.html" style="color: white; text-decoration: none;">About Us</a>
+  <a href="contact.html" style="color: white; text-decoration: none;">Contact</a>
+</nav>
+
+  <main style="padding: 20px;">
+    
+    <h1>🛠️ About Us – Jerk Threads</h1>
+    <p><strong>Built with love. Stitched with purpose.</strong></p>
+    <p>Welcome to Jerk Threads, the bold, unapologetic brand created by a real couple—with a twist.</p>
+    <p><em>She is the beauty. I am the beast. Together, we’re building something loud, loyal, and legendary.</em></p>
+    <p><strong>👑 Our Story</strong><br>She brings the grace. I bring the grit. She brings the heart. I bring the hustle.
+    Every shirt we drop is made with both—because this brand is more than fabric. It’s family.</p>
+    <p><strong>❤️ Our Mission Statement</strong><br>To wear what matters, print what’s real, and honor love, loyalty,
+    and the power of believing in your own story. Jerk Threads exists for the rebels, the hodlers, and the believers who refuse to blend in.</p>
+    <p><strong>✨ Our Promise</strong><br>If you can dream it, I can make it. Your wish is my command, deary.</p>
+    <img src="about-image.png" alt="About Us Image" style="width: 100%; max-width: 800px; display: block; margin: 20px auto;">
+    
+  </main>
+  
+<footer style="text-align: center; padding: 20px; background-color: #000; color: white;">
+  Contact us: <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a><br>
+  IG: <a href="https://instagram.com/jerkthreads" style="color: gold;">@jerkthreads</a> | 
+  X: <a href="https://x.com/jerkthreads" style="color: gold;">@jerkthreads</a>
+</footer>
+
 </body>
 </html>
