--- a/custom.html
+++ b/custom.html
@@ -1,11 +1,36 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Custom Orders - Jerk Threads</title></head>
-<body>
-<h1>Custom Orders</h1>
-<p>Have an idea for a shirt or hoodie? Reach out to us—we’ll make it happen.</p>
-<p><a href="index.html">Return to Home</a></p>
-<p>Thank you for visiting!</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Custom Order</title>
+</head>
+<body style="margin: 0; font-family: Arial, sans-serif; background-color: #111; color: white;">
+  
+<nav style="display: flex; justify-content: space-around; background-color: #000; padding: 10px;">
+  <a href="index.html" style="color: white; text-decoration: none;">Home</a>
+  <a href="shop.html" style="color: white; text-decoration: none;">Shop</a>
+  <a href="custom.html" style="color: white; text-decoration: none;">Custom Orders</a>
+  <a href="about.html" style="color: white; text-decoration: none;">About Us</a>
+  <a href="contact.html" style="color: white; text-decoration: none;">Contact</a>
+</nav>
+
+  <main style="padding: 20px;">
+    
+    <h1>🎨 Custom Orders</h1>
+    <p>Got a vision? Let’s bring it to life.</p>
+    <p>We specialize in custom T-shirts and sweatshirts. Whether it’s your design or an idea you want us to create, we got you.</p>
+    <img src="custom-image.png" alt="Custom Orders" style="width: 100%; max-width: 800px; display: block; margin: 20px auto;">
+    <p>To start your custom order, contact us at <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a></p>
+    
+  </main>
+  
+<footer style="text-align: center; padding: 20px; background-color: #000; color: white;">
+  Contact us: <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a><br>
+  IG: <a href="https://instagram.com/jerkthreads" style="color: gold;">@jerkthreads</a> | 
+  X: <a href="https://x.com/jerkthreads" style="color: gold;">@jerkthreads</a>
+</footer>
+
 </body>
 </html>
