--- a/shop.html
+++ b/shop.html
@@ -1,1 +1,40 @@
-<!DOCTYPE html><html><head><title>Shop</title></head><body><h1>Shop Page</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shop</title>
+</head>
+<body style="margin: 0; font-family: Arial, sans-serif; background-color: #111; color: white;">
+  
+<nav style="display: flex; justify-content: space-around; background-color: #000; padding: 10px;">
+  <a href="index.html" style="color: white; text-decoration: none;">Home</a>
+  <a href="shop.html" style="color: white; text-decoration: none;">Shop</a>
+  <a href="custom.html" style="color: white; text-decoration: none;">Custom Orders</a>
+  <a href="about.html" style="color: white; text-decoration: none;">About Us</a>
+  <a href="contact.html" style="color: white; text-decoration: none;">Contact</a>
+</nav>
+
+  <main style="padding: 20px;">
+    
+    <h1>🛒 Shop Our Collection</h1>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px;">
+      <div><img src="shirt1.png" style="width: 100%;"><p>$29.99</p></div>
+      <div><img src="shirt2.png" style="width: 100%;"><p>$29.99</p></div>
+      <div><img src="shirt3.png" style="width: 100%;"><p>$29.99</p></div>
+      <div><img src="shirt4.png" style="width: 100%;"><p>$29.99</p></div>
+      <div><img src="shirt5.png" style="width: 100%;"><p>$29.99</p></div>
+      <div><img src="shirt6.png" style="width: 100%;"><p>$29.99</p></div>
+    </div>
+    
+  </main>
+  
+<footer style="text-align: center; padding: 20px; background-color: #000; color: white;">
+  Contact us: <a href="mailto:jerkthreads@gmail.com" style="color: gold;">jerkthreads@gmail.com</a><br>
+  IG: <a href="https://instagram.com/jerkthreads" style="color: gold;">@jerkthreads</a> | 
+  X: <a href="https://x.com/jerkthreads" style="color: gold;">@jerkthreads</a>
+</footer>
+
+</body>
+</html>
